--- a/Documentación.ipynb
+++ b/Documentación.ipynb
@@ -83,8 +83,8 @@
     "| arrival_date_month            | Mes de llegada al hotel                                                         |              |\n",
     "| arrival_date_week_number      | Número de la semana de llegada al hotel                                         |      ✅     |\n",
     "| arrival_date_day_of_month     | Día del mes de llegada al hotel                                                 |              |\n",
-    "| stays_in_weekend_nights       | Número de noches que el cliente se quedó durante el fin de semana               |   Redondear  |\n",
-    "| stays_in_week_nights          | Número de noches que el cliente se quedó durante la semana                      |   Redondear  |\n",
+    "| stays_in_weekend_nights       | Número de noches que el cliente se quedó durante el fin de semana               |   ✅ Redondear  |\n",
+    "| stays_in_week_nights          | Número de noches que el cliente se quedó durante la semana                      |   ✅ Redondear  |\n",
     "| adults                        | Número de adultos que acompañaban al cliente en la reserva                      |              |\n",
     "| children                      | Número de niños que acompañaban al cliente en la reserva                        |      ✅     |\n",
     "| babies                        | Número de bebés que acompañaban al cliente en la reserva                        |      ✅      |\n",
@@ -102,11 +102,12 @@
     "| company                       | Identificador de la compañía involucrada en la reserva                          |      ✅     |\n",
     "| days_in_waiting_list          | Número de días que la reserva estuvo en lista de espera                         |       ✅    |\n",
     "| customer_type                 | Tipo de cliente que realizó la reserva (Transient, Contract, Group, Transient-Party) |              |\n",
-    "| adr                           | Tarifa promedio diaria pagada por la reserva                                     |  Hay datos negativos y 5400E Diarios?            |\n",
+    "| adr                           | Tarifa promedio diaria pagada por la reserva                                     |  ✅ Gestión datos negativos           |\n",
     "| required_car_parking_spaces   | Número de espacios de estacionamiento requeridos por el cliente                  |              |\n",
     "| total_of_special_requests     | Número total de solicitudes especiales realizadas por el cliente                 |              |\n",
     "| reservation_status            | Estado de la reserva (Check-Out: Salida, Canceled: Cancelada)                    |              |\n",
-    "| reservation_status_date       | Fecha del estado de la reserva                                                   |  Convertir a datestamp            |\n"
+    "| reservation_status_date       | Fecha del estado de la reserva                                                   |  Convertir a datestamp            |\n",
+    " 0      |                                                   | ✅   Columna eliminada |"
    ]
   },
   {
@@ -118,8 +119,13 @@
     "2. Conversión en la columna \"adr\", en una fila hay un dato negativo \"-6.38\", lo convertimos a Nan\n",
     "3. Redondeamos los datos de las columnas \"stays_in_week_nights\", \"stays_in_weekend_nights\"\n",
     "4. Modificación de datos en la columna \"arrival_date_month\", unificación de tipo de datos.\n",
-    "5. Eliminamos \n",
-    "6. "
+    "5. Renombrar nombre de las columnas\n",
+    "6. Eliminación de la columna \"0\"\n",
+    "7. Eliminacion de las filas en las cuales todos sus datos eran \"Nan\"\n",
+    "\n",
+    "\n",
+    "8. Convertir datime a \n",
+    "9. ver duplicados y nulos"
    ]
   }
  ],
