--- a/Documentación.ipynb
+++ b/Documentación.ipynb
@@ -106,7 +106,7 @@
     "| required_car_parking_spaces   | Número de espacios de estacionamiento requeridos por el cliente                  |              |\n",
     "| total_of_special_requests     | Número total de solicitudes especiales realizadas por el cliente                 |              |\n",
     "| reservation_status            | Estado de la reserva (Check-Out: Salida, Canceled: Cancelada)                    |              |\n",
-    "| reservation_status_date       | Fecha del estado de la reserva                                                   |  Convertir a datestamp            |\n",
+    "| reservation_status_date       | Fecha del estado de la reserva                                                   |  Convertida a datetime            |\n",
     " 0      |                                                   | ✅   Columna eliminada |"
    ]
   },
@@ -122,10 +122,18 @@
     "5. Renombrar nombre de las columnas\n",
     "6. Eliminación de la columna \"0\"\n",
     "7. Eliminacion de las filas en las cuales todos sus datos eran \"Nan\"\n",
+    "------\n",
     "\n",
     "\n",
-    "8. Convertir datime a \n",
-    "9. ver duplicados y nulos"
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "8. Convertir la columna \"status_date\" a datetime.\n",
+    "9. Verificar duplicados\n",
+    "10. Verifcar nulos"
    ]
   }
  ],
