--- a/notebooks/analisis_inicial.ipynb
+++ b/notebooks/analisis_inicial.ipynb
@@ -2517,7 +2517,7 @@
     }
    ],
    "source": [
-    "print(df_clean['status_date'].dtype) # Verificar"
+    "print(df_clean['status_date'].dtype) # Verificar el tipo de la columna"
    ]
   },
   {
@@ -2578,17 +2578,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fechas pasadas en 'status_date':                hotel canceled  lead_time  arrival_year arrival_month  \\\n",
+      "0       Resort Hotel    False      342.0        2015.0             7   \n",
+      "1       Resort Hotel    False      737.0           NaN             7   \n",
+      "2       Resort Hotel    False        7.0        2015.0             7   \n",
+      "3       Resort Hotel    False       13.0           NaN             7   \n",
+      "4       Resort Hotel    False       14.0           NaN             7   \n",
+      "...              ...      ...        ...           ...           ...   \n",
+      "119385    City Hotel    False       23.0        2017.0             8   \n",
+      "119386    City Hotel    False      102.0           NaN             8   \n",
+      "119387    City Hotel    False       34.0        2017.0             8   \n",
+      "119388    City Hotel    False      109.0           NaN             8   \n",
+      "119389    City Hotel    False      205.0        2017.0             8   \n",
+      "\n",
+      "        arrival_week  arrival_day  weekend_nights  week_nights  adults  \\\n",
+      "0               27.0          1.0             0.0          0.0     2.0   \n",
+      "1               27.0          1.0             0.0          0.0     2.0   \n",
+      "2               27.0          1.0             0.0          1.0     1.0   \n",
+      "3               27.0          1.0             0.0          1.0     1.0   \n",
+      "4                NaN          1.0             0.0          2.0     2.0   \n",
+      "...              ...          ...             ...          ...     ...   \n",
+      "119385          35.0         30.0             2.0          5.0     2.0   \n",
+      "119386          35.0         31.0             2.0          5.0     3.0   \n",
+      "119387          35.0         31.0             2.0          5.0     2.0   \n",
+      "119388          35.0         31.0             2.0          5.0    55.0   \n",
+      "119389          35.0         29.0             2.0          7.0     2.0   \n",
+      "\n",
+      "        children  babies meal country market_segment distribution_channel  \\\n",
+      "0            NaN     0.0   BB     PRT            NaN               Direct   \n",
+      "1            NaN     0.0   BB     NaN            NaN               Direct   \n",
+      "2            0.0     0.0   BB     GBR            NaN               Direct   \n",
+      "3            NaN     0.0   BB     GBR      Corporate            Corporate   \n",
+      "4            NaN     0.0   BB     NaN      Online TA                TA/TO   \n",
+      "...          ...     ...  ...     ...            ...                  ...   \n",
+      "119385       0.0     0.0   BB     NaN  Offline TA/TO                TA/TO   \n",
+      "119386       NaN     0.0   BB     FRA            NaN                TA/TO   \n",
+      "119387       NaN     0.0   BB     NaN      Online TA                TA/TO   \n",
+      "119388       0.0     0.0   BB     NaN      Online TA                TA/TO   \n",
+      "119389       NaN     0.0   HB     DEU            NaN                TA/TO   \n",
+      "\n",
+      "        repeated_guest  prev_cancellations  prev_not_canceled  \\\n",
+      "0                  0.0                 NaN                0.0   \n",
+      "1                  0.0                 0.0                0.0   \n",
+      "2                  0.0                 0.0                0.0   \n",
+      "3                  0.0                 0.0                0.0   \n",
+      "4                  0.0                 0.0                0.0   \n",
+      "...                ...                 ...                ...   \n",
+      "119385             0.0                 0.0                0.0   \n",
+      "119386             0.0                 NaN                0.0   \n",
+      "119387             0.0                 0.0                0.0   \n",
+      "119388             0.0                 0.0                0.0   \n",
+      "119389             0.0                 0.0                0.0   \n",
+      "\n",
+      "       reserved_room_type assigned_room_type  booking_changes  agent  company  \\\n",
+      "0                       C                  C              3.0    NaN      NaN   \n",
+      "1                     NaN                  C              4.0    NaN      NaN   \n",
+      "2                       A                  C              0.0    NaN      NaN   \n",
+      "3                       A                  A              0.0  304.0      NaN   \n",
+      "4                       A                  A              0.0  240.0      NaN   \n",
+      "...                   ...                ...              ...    ...      ...   \n",
+      "119385                  A                  A              0.0  394.0      NaN   \n",
+      "119386                  E                  E              0.0    9.0      NaN   \n",
+      "119387                NaN                  D              0.0    9.0      NaN   \n",
+      "119388                  A                  A              0.0   89.0      NaN   \n",
+      "119389                NaN                  A              0.0    9.0      NaN   \n",
+      "\n",
+      "        days_waiting_list customer_type     adr  parking_spaces  \\\n",
+      "0                     0.0     Transient    0.00             0.0   \n",
+      "1                     0.0     Transient    0.00             0.0   \n",
+      "2                     0.0     Transient   75.00             0.0   \n",
+      "3                     0.0     Transient   75.00             0.0   \n",
+      "4                     0.0     Transient   98.00             0.0   \n",
+      "...                   ...           ...     ...             ...   \n",
+      "119385                0.0           NaN   96.14             0.0   \n",
+      "119386                0.0     Transient  225.43             0.0   \n",
+      "119387                0.0     Transient  157.71             0.0   \n",
+      "119388                0.0     Transient  104.40             0.0   \n",
+      "119389                0.0           NaN  151.20             0.0   \n",
+      "\n",
+      "        special_requests reservation_status status_date  \n",
+      "0                    0.0          Check-Out  2015-07-01  \n",
+      "1                    0.0          Check-Out  2015-07-01  \n",
+      "2                    0.0          Check-Out  2015-07-02  \n",
+      "3                    0.0          Check-Out  2015-07-02  \n",
+      "4                    1.0          Check-Out  2015-07-03  \n",
+      "...                  ...                ...         ...  \n",
+      "119385               0.0          Check-Out  2017-06-09  \n",
+      "119386               2.0          Check-Out  2017-07-09  \n",
+      "119387               4.0          Check-Out  2017-07-09  \n",
+      "119388               0.0          Check-Out  2017-07-09  \n",
+      "119389               2.0          Check-Out  2017-07-09  \n",
+      "\n",
+      "[105106 rows x 31 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Ver fechas pasadas\n",
-    "\n",
     "df_clean['status_date'] = pd.to_datetime(df_clean['status_date'])   # Convertir la columna 'status_date' a tipo datetime\n",
     "\n",
     "fecha_actual = datetime.now()    # Obtener la fecha actual\n",
+    "fecha_actual\n",
     "\n",
-    "fechas_pasadas = df_clean[df_clean['status_date'] < fecha_actual]   # Filtrar fechas pasadas"
+    "fechas_pasadas = df_clean[df_clean['status_date'] < fecha_actual]   # Filtrar fechas pasadas\n",
+    "print(\"Fechas pasadas en 'status_date':\", fechas_pasadas)"
    ]
   },
   {
