file analisis updated

--- a/Documentación.ipynb
+++ b/Documentación.ipynb
@@ -122,17 +122,8 @@
     "5. Renombrar nombre de las columnas\n",
     "6. Eliminación de la columna \"0\"\n",
     "7. Eliminacion de las filas en las cuales todos sus datos eran \"Nan\"\n",
-    "------\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "8. Convertir la columna \"status_date\" a datetime.\n",
-    "9. Verificar duplicados\n",
+    "9. Verificar duplicados y eliminación de ellos-\n",
     "10. Verifcar nulos"
    ]
   }
