--- a/Documentación.ipynb
+++ b/Documentación.ipynb
@@ -90,8 +90,8 @@
     "| babies                        | Número de bebés que acompañaban al cliente en la reserva                        |      ✅      |\n",
     "| meal                          | Tipo de comida incluida en la reserva (BB: Desayuno, HB: Media Pensión, FB: Pensión Completa) |              |\n",
     "| country                       | País de origen del cliente                                                      |              |\n",
-    "| market_segment                | Segmento de mercado al que pertenece la reserva                                 |              |\n",
-    "| distribution_channel          | Canal de distribución utilizado para realizar la reserva                        |              |\n",
+    "| market_segment                | Segmento de mercado al que pertenece la reserva                                 |     ✅         |\n",
+    "| distribution_channel          | Canal de distribución utilizado para realizar la reserva                        |     ✅         |\n",
     "| is_repeated_guest             | Indica si el cliente es un huésped repetido (1) o no (0)                        | Cambiar a booleano True/False       |\n",
     "| previous_cancellations        | Número de reservas canceladas por el cliente antes de esta reserva              |     ✅       |\n",
     "| previous_bookings_not_canceled| Número de reservas no canceladas por el cliente antes de esta reserva           |     ✅       |\n",
