--- a/notebooks/analisis_inicial.ipynb
+++ b/notebooks/analisis_inicial.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importaciones \n",
     "# -----------------------------------------------------------------------\n",
     "import pandas as pd\n",
     "import numpy as np \n",
@@ -37,6 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Apertura del csv a utilizar\n",
     "df = pd.read_csv('../files /finanzas-hotel-bookings.csv', index_col= 0, low_memory=False)"
    ]
   },
@@ -943,7 +945,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#quitamos decimales\n",
+    "# Eliminación de los decimales\n",
     "df_sin_dup[\"stays_in_weekend_nights\"] = df_sin_dup[\"stays_in_weekend_nights\"].round()\n",
     "df_sin_dup[\"stays_in_week_nights\"] = df_sin_dup[\"stays_in_week_nights\"].round()"
    ]
