--- a/Documentación.ipynb
+++ b/Documentación.ipynb
@@ -106,7 +106,7 @@
     "| required_car_parking_spaces   | Número de espacios de estacionamiento requeridos por el cliente                  |              |\n",
     "| total_of_special_requests     | Número total de solicitudes especiales realizadas por el cliente                 |              |\n",
     "| reservation_status            | Estado de la reserva (Check-Out: Salida, Canceled: Cancelada)                    |              |\n",
-    "| reservation_status_date       | Fecha del estado de la reserva                                                   |  Convertida a datetime            |\n",
+    "| reservation_status_date       | Fecha del estado de la reserva                                                   |  ✅ Convertida a datetime            |\n",
     " 0      |                                                   | ✅   Columna eliminada |"
    ]
   },
@@ -123,8 +123,10 @@
     "6. Eliminación de la columna \"0\"\n",
     "7. Eliminacion de las filas en las cuales todos sus datos eran \"Nan\"\n",
     "8. Convertir la columna \"status_date\" a datetime.\n",
-    "9. Verificar duplicados y eliminación de ellos-\n",
-    "10. Verifcar nulos"
+    "9. Verificar duplicados y eliminación de ellos.\n",
+    "10. Verifcar nulos\n",
+    "11. Modificación de las columnas con datos \"Nan\" a \"Desconocido\" de las \"lista_columnas\".\n",
+    "12. Redondear los datos de las columnas seleccionadas(lista_redondear)"
    ]
   }
  ],
