--- a/notebooks/analisis_inicial.ipynb
+++ b/notebooks/analisis_inicial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "[182877 rows x 32 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
       "(182877, 32)\n",
       "------Información adicional:---------\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 182877 entries, 0 to 182876\n",
+      "Index: 182877 entries, 0 to 182876\n",
       "Data columns (total 32 columns):\n",
       " #   Column                          Non-Null Count   Dtype  \n",
       "---  ------                          --------------   -----  \n",
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
        "dtype('O')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1023,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1604,7 +1604,7 @@
        "[1722 rows x 32 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1615,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1635,7 +1635,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1656,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1667,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
        "[119837 rows x 32 columns]>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1817,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1863,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1880,7 +1880,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1891,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1901,7 +1901,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1922,7 +1922,7 @@
        "119837"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1933,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1942,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1951,7 @@
        "118115"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1962,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1971,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1988,7 +1988,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1999,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -2486,7 +2486,7 @@
        "       '2023-02-30', '2024-11-31'], dtype=object)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2498,16 +2498,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13009"
+       "12974"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2518,25 +2518,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean[\"status_date\"] = pd.to_datetime(df_clean[\"status_date\"])"
+    "df_clean[\"status_date\"] = pd.to_datetime(df_clean[\"status_date\"], errors = \"coerce\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2024, 4, 12, 12, 14, 30, 734157)"
+       "datetime.datetime(2024, 4, 12, 20, 39, 38, 294074)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2549,7 +2549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -2617,7 +2617,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2630,7 +2630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -2954,7 +2954,7 @@
        "182004                NaN         NaT  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2967,7 +2967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -3499,7 +3499,7 @@
        "[118109 rows x 31 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3510,7 +3510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -3550,7 +3550,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3562,7 +3562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -3602,7 +3602,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3614,12 +3614,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "market_segment\n",
        "Online TA        28313\n",
        "Offline TA/TO    11833\n",
        "Groups            9626\n",
@@ -3628,10 +3629,10 @@
        "Complementary      363\n",
        "Aviation           118\n",
        "Undefined            1\n",
-       "Name: market_segment, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3642,7 +3643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -3652,7 +3653,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3663,7 +3664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -3769,7 +3770,7 @@
        "[6816 rows x 2 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3780,7 +3781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3794,7 +3795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -4077,7 +4078,7 @@
        "4          Check-Out  2015-07-03  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4088,7 +4089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4100,7 +4101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -4383,7 +4384,7 @@
        "4          Check-Out  2015-07-03  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4394,7 +4395,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "to assemble mappings requires at least that [year, month, day] be specified: [day,month,year] is missing",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[114], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# creamos columna arrival_date, uniendo arrival_year, arrival_month y arrival_day\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m df_clean[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marrival_year\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDesconocido\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m df_clean[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marrival_month\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDesconocido\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m df_clean[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marrival_day\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDesconocido\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m----> 3\u001b[0m     df_clean[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marrival_date\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_datetime\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf_clean\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43marrival_year\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43marrival_month\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43marrival_day\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m      5\u001b[0m     pd\u001b[38;5;241m.\u001b[39mNaT\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\tools\\datetimes.py:1070\u001b[0m, in \u001b[0;36mto_datetime\u001b[1;34m(arg, errors, dayfirst, yearfirst, utc, format, exact, unit, infer_datetime_format, origin, cache)\u001b[0m\n\u001b[0;32m   1068\u001b[0m         result \u001b[38;5;241m=\u001b[39m arg\u001b[38;5;241m.\u001b[39m_constructor(values, index\u001b[38;5;241m=\u001b[39marg\u001b[38;5;241m.\u001b[39mindex, name\u001b[38;5;241m=\u001b[39marg\u001b[38;5;241m.\u001b[39mname)\n\u001b[0;32m   1069\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(arg, (ABCDataFrame, abc\u001b[38;5;241m.\u001b[39mMutableMapping)):\n\u001b[1;32m-> 1070\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43m_assemble_from_unit_mappings\u001b[49m\u001b[43m(\u001b[49m\u001b[43marg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mutc\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1071\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(arg, Index):\n\u001b[0;32m   1072\u001b[0m     cache_array \u001b[38;5;241m=\u001b[39m _maybe_cache(arg, \u001b[38;5;28mformat\u001b[39m, cache, convert_listlike)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\tools\\datetimes.py:1186\u001b[0m, in \u001b[0;36m_assemble_from_unit_mappings\u001b[1;34m(arg, errors, utc)\u001b[0m\n\u001b[0;32m   1184\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(req):\n\u001b[0;32m   1185\u001b[0m     _required \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(req)\n\u001b[1;32m-> 1186\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m   1187\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mto assemble mappings requires at least that \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1188\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m[year, month, day] be specified: [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m_required\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] is missing\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1189\u001b[0m     )\n\u001b[0;32m   1191\u001b[0m \u001b[38;5;66;03m# keys we don't recognize\u001b[39;00m\n\u001b[0;32m   1192\u001b[0m excess \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(\u001b[38;5;28mset\u001b[39m(unit_rev\u001b[38;5;241m.\u001b[39mkeys()) \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mset\u001b[39m(_unit_map\u001b[38;5;241m.\u001b[39mvalues()))\n",
+      "\u001b[1;31mValueError\u001b[0m: to assemble mappings requires at least that [year, month, day] be specified: [day,month,year] is missing"
+     ]
+    }
+   ],
+   "source": [
+    "# creamos columna arrival_date, uniendo arrival_year, arrival_month y arrival_day\n",
+    "if df_clean[\"arrival_year\"] is not \"Desconocido\" and df_clean[\"arrival_month\"] is not \"Desconocido\" and df_clean[\"arrival_day\"] is not \"Desconocido\":\n",
+    "    df_clean[\"arrival_date\"] = pd.to_datetime(df_clean[[\"arrival_year\", \"arrival_month\", \"arrival_day\"]])\n",
+    "else:\n",
+    "    pd.NaT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
