Updated readme and documentation file

--- a/Documentación.ipynb
+++ b/Documentación.ipynb
@@ -107,7 +107,7 @@
     "| total_of_special_requests     | Número total de solicitudes especiales realizadas por el cliente                 |              |\n",
     "| reservation_status            | Estado de la reserva (Check-Out: Salida, Canceled: Cancelada)                    |              |\n",
     "| reservation_status_date       | Fecha del estado de la reserva                                                   |  ✅ Convertida a datetime            |\n",
-    " 0      |                                                   | ✅   Columna eliminada |"
+    " 0      |                                       --            | ✅   Columna eliminada |"
    ]
   },
   {
@@ -115,16 +115,16 @@
    "metadata": {},
    "source": [
     "# Pasos del EDA, realizados:\n",
-    "1. Eliminar duplicados, siendo 63040.\n",
+    "1. Eliminación de duplicados, siendo 63040.\n",
     "2. Conversión en la columna \"adr\", en una fila hay un dato negativo \"-6.38\", lo convertimos a Nan\n",
     "3. Redondeamos los datos de las columnas \"stays_in_week_nights\", \"stays_in_weekend_nights\"\n",
     "4. Modificación de datos en la columna \"arrival_date_month\", unificación de tipo de datos.\n",
     "5. Renombrar nombre de las columnas\n",
     "6. Eliminación de la columna \"0\"\n",
-    "7. Eliminacion de las filas en las cuales todos sus datos eran \"Nan\"\n",
+    "7. Eliminación de las filas en las cuales todos sus datos eran \"Nan\"\n",
     "8. Convertir la columna \"status_date\" a datetime.\n",
     "9. Verificar duplicados y eliminación de ellos.\n",
-    "10. Verifcar nulos\n",
+    "10. Verificar nulos\n",
     "11. Modificación de las columnas con datos \"Nan\" a \"Desconocido\" de las \"lista_columnas\".\n",
     "12. Redondear los datos de las columnas seleccionadas(lista_redondear)"
    ]
