--- a/Documentación.ipynb
+++ b/Documentación.ipynb
@@ -128,6 +128,34 @@
     "11. Modificación de las columnas con datos \"Nan\" a \"Desconocido\" de las \"lista_columnas\".\n",
     "12. Redondear los datos de las columnas seleccionadas(lista_redondear)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GUION PRESENTACION:\n",
+    "\n",
+    "## DASHBOARD 1 (vision general de nuestros clientes)\n",
+    "    - Demógrafico de los tipos de clientes que vienen al hotel (origen, niños, bebes, parking...) filtrado por: hotel1 / hotel2 / ambos hoteles\n",
+    "    - reservas canceladas totales (quesito?)\n",
+    "    - Timeline de reservas y cancelaciones (gráfico de líneas) \n",
+    "## DASHBOARD 2 (Patrón encontrado: origen de los cancelados)\n",
+    "    - Top 10 de lead_time/origen (conclusion: los portugueses con lead time de 10-12 meses cancelan micho)\n",
+    "    - grafias comparativas paises\n",
+    "    - time line de las cancelaciones segun lead time de los portugueses? de los top 3 paises que mas cancelan?\n",
+    "## DASHBOARD 3 (Patrón encontrado: problema con las reservas realizadas mediante agentes)\n",
+    "    - un porcentaje muy alto de las reservas realizadas con agente se acaban cancelado\n",
+    "## DASHBOARD 4 (Patrón encontrado: los tipos de gente que viene al hotel, un poco detalles random encontrados)\n",
+    "    - los que reservan parking nunca cancelan\n",
+    "    - no vienen casi bebes ni niños\n",
+    "## DASHBOARD 5 (Conclusiones finales)\n",
+    "    - Hay muchas cancelaciones en general (la norma es de 5 a 15%) \n",
+    "        - Algo sucede con los portugueses con lead time de 10-12 meses en concreto (cancelan casi todos)\n",
+    "    - No parece que sea un destino atractivo para niños y bebes\n",
+    "    - El parking es un importante atractivo (¿quizá el resto de hoteles no tiene aparcamiento por eso los que lo necesitan nunca cancelan?)\n",
+    "    - Algo sucede con los agentes (¿quizá cobran segun reservas sin tener en cuenta si finalmente se cancelan?)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
