--- a/Documentación.ipynb
+++ b/Documentación.ipynb
@@ -135,17 +135,17 @@
    "source": [
     "# GUION PRESENTACION:\n",
     "\n",
-    "## DASHBOARD 1 (vision general de nuestros clientes)\n",
+    "## DASHBOARD 1 (vision general de nuestros clientes) BEA\n",
     "    - Demógrafico de los tipos de clientes que vienen al hotel (origen, niños, bebes, parking...) filtrado por: hotel1 / hotel2 / ambos hoteles\n",
     "    - reservas canceladas totales (quesito?)\n",
     "    - Timeline de reservas y cancelaciones (gráfico de líneas) \n",
-    "## DASHBOARD 2 (Patrón encontrado: origen de los cancelados)\n",
+    "## DASHBOARD 2 (Patrón encontrado: origen de los cancelados) SAIRA\n",
     "    - Top 10 de lead_time/origen (conclusion: los portugueses con lead time de 10-12 meses cancelan micho)\n",
     "    - grafias comparativas paises\n",
     "    - time line de las cancelaciones segun lead time de los portugueses? de los top 3 paises que mas cancelan?\n",
-    "## DASHBOARD 3 (Patrón encontrado: problema con las reservas realizadas mediante agentes)\n",
+    "## DASHBOARD 3 (Patrón encontrado: problema con las reservas realizadas mediante agentes) INES\n",
     "    - un porcentaje muy alto de las reservas realizadas con agente se acaban cancelado\n",
-    "## DASHBOARD 4 (Patrón encontrado: los tipos de gente que viene al hotel, un poco detalles random encontrados)\n",
+    "## DASHBOARD 4 (Patrón encontrado: los tipos de gente que viene al hotel, un poco detalles random encontrados) ALEJANDRA\n",
     "    - los que reservan parking nunca cancelan\n",
     "    - no vienen casi bebes ni niños\n",
     "## DASHBOARD 5 (Conclusiones finales)\n",
