--- a/ines pruebas.ipynb
+++ b/ines pruebas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,6 +216,130 @@
    "outputs": [],
    "source": [
     "df2.to_csv('files_/porcentajes_cancelaciones.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('files_/porcentajes_cancelaciones.csv', index_col= 0, low_memory=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>lead_period</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>porcentaje_cancelados</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>95.0</th>\n",
+       "      <td>PRT</td>\n",
+       "      <td>Mes 10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93.0</th>\n",
+       "      <td>PRT</td>\n",
+       "      <td>Mes 12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91.0</th>\n",
+       "      <td>PRT</td>\n",
+       "      <td>Mes 11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86.0</th>\n",
+       "      <td>PRT</td>\n",
+       "      <td>Mes 8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76.0</th>\n",
+       "      <td>PRT</td>\n",
+       "      <td>Mes 9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75.0</th>\n",
+       "      <td>ESP</td>\n",
+       "      <td>Mes 12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73.0</th>\n",
+       "      <td>PRT</td>\n",
+       "      <td>Mes 7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72.0</th>\n",
+       "      <td>PRT</td>\n",
+       "      <td>Mes 6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71.0</th>\n",
+       "      <td>ESP</td>\n",
+       "      <td>Mes 9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71.0</th>\n",
+       "      <td>PRT</td>\n",
+       "      <td>Mes 4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      country lead_period\n",
+       "porcentaje_cancelados                    \n",
+       "95.0                      PRT      Mes 10\n",
+       "93.0                      PRT      Mes 12\n",
+       "91.0                      PRT      Mes 11\n",
+       "86.0                      PRT       Mes 8\n",
+       "76.0                      PRT       Mes 9\n",
+       "75.0                      ESP      Mes 12\n",
+       "73.0                      PRT       Mes 7\n",
+       "72.0                      PRT       Mes 6\n",
+       "71.0                      ESP       Mes 9\n",
+       "71.0                      PRT       Mes 4"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ordenado = df.sort_values(by='porcentaje_cancelados', ascending=False)\n",
+    "df_ordenado.head(10)"
    ]
   }
  ],
