--- a/notebooks/analisis_inicial.ipynb
+++ b/notebooks/analisis_inicial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,17 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Apertura del csv a utilizar\n",
-    "df = pd.read_csv('../files /finanzas-hotel-bookings.csv', index_col= 0, low_memory=False)"
+    "df = pd.read_csv('../files_/finanzas-hotel-bookings.csv', index_col= 0, low_memory=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "[182877 rows x 32 columns]"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
       "(182877, 32)\n",
       "------Información adicional:---------\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 182877 entries, 0 to 182876\n",
+      "Int64Index: 182877 entries, 0 to 182876\n",
       "Data columns (total 32 columns):\n",
       " #   Column                          Non-Null Count   Dtype  \n",
       "---  ------                          --------------   -----  \n",
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
        "dtype('O')"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1023,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1604,7 +1604,7 @@
        "[1722 rows x 32 columns]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1615,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1635,7 +1635,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1656,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1667,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
        "[119837 rows x 32 columns]>"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1817,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1863,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1880,7 +1880,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1891,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1901,7 +1901,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1922,7 +1922,7 @@
        "119837"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1933,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1942,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1951,7 @@
        "118115"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1962,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1971,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1988,7 +1988,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1999,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2486,7 +2486,7 @@
        "       '2023-02-30', '2024-11-31'], dtype=object)"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2498,7 +2498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2507,7 +2507,7 @@
        "12974"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2518,7 +2518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2527,16 +2527,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2024, 4, 12, 20, 48, 0, 797967)"
+       "datetime.datetime(2024, 4, 23, 12, 53, 54, 630440)"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2549,7 +2549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2617,7 +2617,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2630,7 +2630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2954,7 +2954,7 @@
        "182004                NaN         NaT  "
       ]
      },
-     "execution_count": 151,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2967,7 +2967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3499,7 +3499,7 @@
        "[118109 rows x 31 columns]"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3510,7 +3510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3550,7 +3550,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3562,7 +3562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3602,7 +3602,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3614,13 +3614,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "market_segment\n",
        "Online TA        28313\n",
        "Offline TA/TO    11833\n",
        "Groups            9626\n",
@@ -3629,10 +3628,10 @@
        "Complementary      363\n",
        "Aviation           118\n",
        "Undefined            1\n",
-       "Name: count, dtype: int64"
+       "Name: market_segment, dtype: int64"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3643,7 +3642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -3653,7 +3652,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3664,7 +3663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -3770,7 +3769,7 @@
        "[6816 rows x 2 columns]"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3781,7 +3780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3795,7 +3794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -4078,7 +4077,7 @@
        "4          Check-Out  2015-07-03  "
       ]
      },
-     "execution_count": 159,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4089,7 +4088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4101,7 +4100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -4384,7 +4383,7 @@
        "4          Check-Out  2015-07-03  "
       ]
      },
-     "execution_count": 161,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4395,7 +4394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4417,21 +4416,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "arrival_year\n",
        "Desconocido    54093\n",
        "2016.0         30461\n",
        "2017.0         21867\n",
        "2015.0         11694\n",
-       "Name: count, dtype: int64"
+       "Name: arrival_year, dtype: int64"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4442,7 +4440,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "164"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_clean[\"country\"].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -4731,7 +4749,7 @@
        "4          Check-Out  2015-07-03          NaT  "
       ]
      },
-     "execution_count": 164,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4742,7 +4760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
